--- a/settings.gradle
+++ b/settings.gradle
@@ -1,2 +1,8 @@
+include ':works-databinding'
+project(':works-databinding').projectDir = new File('databinding')
+
 include ':works-builder'
 project(':works-builder').projectDir = new File('library')
+
+include ':works-material'
+project(':works-material').projectDir = new File('material')
