--- a/build.gradle
+++ b/build.gradle
@@ -1,29 +1,34 @@
+apply from: ('jenkins.groovy')
+
 buildscript {
     repositories {
         jcenter()
+        maven {
+            url 'http://dl.bintray.com/yunarta-kartawahyudi/snapshot'
+        }
     }
 
     dependencies {
         classpath "com.android.tools.build:gradle:2.0.0-alpha2"
-        classpath "com.jfrog.bintray.gradle:gradle-bintray-plugin:1.1"
-        classpath 'com.github.dcendents:android-maven-gradle-plugin:1.3'
+        classpath 'com.mobilesolutionworks:works-bintray-gradle:1.0.5'
+        classpath 'com.mobilesolutionworks:works-autoconfig:1.0.0'
     }
 }
 
 apply plugin: 'com.android.library'
+apply plugin: 'com.mobilesolutionworks.bintray-publish'
+apply plugin: 'com.mobilesolutionworks.android-autoconfig'
 
 group 'com.mobilesolutionworks'
 version '1.1.1'
 
-apply from: ('https://raw.githubusercontent.com/yunarta/works-gradle-script/master/auto-configure.gradle')
-
 android {
-    compileSdkVersion autoCompileSdkVersion(23)
-    buildToolsVersion autoBuildToolsVersion('23.0.2')
+    compileSdkVersion autoConfig.sdk(23)
+    buildToolsVersion autoConfig.buildTools('23.0.2')
 
     defaultConfig {
         minSdkVersion 14
-        targetSdkVersion autoCompileSdkVersion(23)
+        targetSdkVersion autoConfig.sdk(23)
         versionCode 1
         versionName version
     }
@@ -39,19 +44,6 @@ android {
 dependencies {
 }
 
-project.afterEvaluate {
-    project.android.libraryVariants.all { variant ->
-        variant.outputs.each { output ->
-            def outputFile = output.outputFile
-            if (outputFile != null && outputFile.name.endsWith('.aar')) {
-                def fileName = "${archivesBaseName}-${version}.aar"
-                output.outputFile = new File(outputFile.parent, fileName)
-            }
-        }
-    }
-}
-
-apply from: 'https://raw.githubusercontent.com/yunarta/works-gradle-script/master/publish-works.gradle'
 
 worksPublish {
     bintray {
@@ -67,7 +59,4 @@ worksPublish {
 
     siteUrl = 'https://github.com/yunarta/works-versioning-android'
     gitUrl = 'https://github.com/yunarta/works-versioning-android.git'
-
 }
-
-apply from: 'https://raw.githubusercontent.com/yunarta/works-gradle-script/master/publish-bintray-for-android-lib-forced.gradle'
