--- a/build.gradle
+++ b/build.gradle
@@ -51,6 +51,7 @@ dependencies {
 worksPublish {
     bintray {
         name = group + ':works-material'
+        repo = 'maven'
     }
 
     developer {
